kubernetes/grafana/ingressroute.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/instance: grafana
    external-dns: enabled
spec:
  host: grafana.garrettholland.com
  port:
    targetPort: http-grafana
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: grafana
    weight: 100
